# sumer-ia

./: .gitignore  README.md  fastagent.config.yaml  main.py  pyproject.toml
agents/: transcription_agents.py
component_a/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py  transcribe_cli.py  troubleshoot_upload.py  whisperx-cli  whisperx-cli.bat
component_a/.claude/: AGENT_TRANSCRIPTION_GUIDE.md  settings.local.json
component_a/docs/: installation.md
component_a/src/: __init__.py  app.py  config.py  format_converters.py  memory_manager.py  utils.py  whisperx_processor.py
component_a/tests/: conftest.py  test_cli.py  test_config.py  test_format_converters.py
component_b/: fastagent.config.yaml.example  pyproject.toml  robust_main.py
component_b/src/: __init__.py  content_format_detector.py  diagnostic_agents.py  distributed_agents.py  enhanced_agents.py  qa_agents.py
component_b_streamlit/: .env.example  .gitignore  ARCHITECTURE_INTELLIGENT_SEGMENTATION.md  ARCHITECTURE_REFACTOR_SUMMARY.md  CLAUDE.md  CONSOLIDACION_COMPLETADA.md  IMPLEMENTATION_SUMMARY.md  PLAN_TACTICO_CONSOLIDACION_STREAMLIT.md  RATE_LIMIT_IMPROVEMENTS.md  README.md  STREAMLIT_CONSOLIDATION_PLAN.md  STREAMLIT_INTEGRATION.md  fastagent-cli  fastagent-cli.bat  fastagent.jsonl  fastagent_cli.py  pyproject.toml  test_streamlit_integration.py
component_b_streamlit/.claude/: settings.local.json
component_b_streamlit/.streamlit/: config.toml
component_b_streamlit/docs/: ADVANCED.md  CONFIGURATION.md  QUICKSTART.md
component_b_streamlit/docs/history/: SIMPLIFICATION_SUMMARY.md
component_b_streamlit/scripts/: run_streamlit.sh
component_b_streamlit/src/: enhanced_agents.py  intelligent_segmenter.py  meeting_processor.py  simple_agents.py
component_b_streamlit/src/agents/: specialized_agents.py
component_b_streamlit/src/cli/: __init__.py  args_parser.py  config_loader.py  validators.py
component_b_streamlit/src/streamlit_interface/: __init__.py  app.py  cli.py
component_b_streamlit/src/streamlit_interface/.streamlit/: config.toml
component_b_streamlit/src/streamlit_interface/assets/: styles.css
component_b_streamlit/src/streamlit_interface/components/: __init__.py  ui_components.py
component_b_streamlit/src/streamlit_interface/core/: __init__.py  agent_interface.py  config_manager.py
component_b_streamlit/src/streamlit_interface/pages/: 1_📊_Dashboard.py  1_📝_Procesamiento.py  2_⚙️_Configuración.py  3_📝_Procesamiento.py  4_🤖_Agentes.py  __init__.py
component_b_streamlit/src/streamlit_interface/utils/: __init__.py  file_handlers.py  validation.py
component_b_streamlit/src/utils/: multimodal_context.py
component_b_streamlit/streamlit_app/: README.md  requirements.txt  run.sh  streamlit_app.py
component_b_streamlit/streamlit_app/.streamlit/: config.toml
component_b_streamlit/streamlit_app/assets/: styles.css
component_b_streamlit/streamlit_app/components/: agent_interface.py  config_manager.py  ui_components.py  ui_widgets.py
component_b_streamlit/streamlit_app/pages/: 0_inicio.py  1_configuracion.py  1_⚙️_Configuración.py  1_📊_Dashboard.py  2_⚙️_Configuración.py  2_📝_Procesamiento.py  3_📝_Procesamiento.py  3_🤖_Agentes.py  4_🤖_Agentes.py
component_b_streamlit/streamlit_app/utils/: file_handlers.py  validation.py
component_b_streamlit/tests/: test_agent_interface_config.py  test_cli.py  test_multimodal_context.py  test_specialized_agents.py  test_specialized_agents_mock.py
component_b_streamlit/tests/integration/: test_streamlit_integration.py
component_video/: .gitignore  BUILD_README.md  README.md  build.bat  build.ps1  build_config.yaml  build_pipeline.sh  build_windows.bat  build_windows.ps1  build_windows_simple.ps1  pyproject.toml  quick_build.sh  requirements.txt  universal_build.sh
component_video/docs/: architecture.md
component_video/scripts/: build.py
component_video/src/video_frame_capture/: __init__.py  main.py
component_video/src/video_frame_capture/core/: frame_extractor.py  memory_manager.py  timeline_controller.py  video_player.py
component_video/src/video_frame_capture/models/: __init__.py  capture_model.py  project_model.py  thumbnail_model.py
component_video/src/video_frame_capture/resources/: __init__.py
component_video/src/video_frame_capture/ui/: controls_panel.py  main_window.py  thumbnail_gallery.py  timeline_widget.py  video_display.py
component_video/src/video_frame_capture/utils/: __init__.py  cache_manager.py  file_manager.py  opencv_bridge.py
component_video/src/video_frame_capture/workers/: __init__.py  export_worker.py  frame_capture_worker.py  thumbnail_worker.py
component_video/tests/: __init__.py
component_video/tests/test_core/: __init__.py  test_video_player.py
prompts/: formatter_prompt.md
tools/: verification_server.py
workflows/: main_workflow.py
