[project]
name = "whisperx-streamlit"
version = "0.1.0"
description = "WhisperX Streamlit application for long audio transcription with speaker diarization"
authors = [{name = "Pablo Toledo", email = "pablo@example.com"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "streamlit>=1.28.0",
    "faster-whisper>=0.9.0",
    "transformers>=4.35.0",
    "librosa>=0.10.2",
    "numba>=0.58.0",
    "llvmlite>=0.41.0",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "pyannote-audio>=3.1.1",
    "huggingface-hub>=0.17.0",
    "psutil>=5.9.0",
    "whisperx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperX.git" }
