[project]
name = "distributed-transcription-system"
version = "0.1.0"
description = "LLM-agnostic distributed transcription processing system"
authors = [
    {name = "Pablo Toledo", email = "pablo@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fast-agent-mcp",
    "sentence-transformers",
    "hdbscan",
    "scikit-learn",
    "transformers",
    "torch",
    "pydantic>=2.11.7",
    "nltk>=3.9.1",
    "python-pptx>=0.6.21",
    "PyPDF2>=3.0.0",
    "Pillow>=10.0.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    # Streamlit dependencies
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pytest-asyncio>=1.1.0",
    "pypdf>=6.1.1",
    "streamlit-mermaid>=0.3.0",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]
streamlit = [
    "streamlit-option-menu>=0.3.6",
    "streamlit-ace>=0.1.1",
    "streamlit-authenticator>=0.2.3",
    "streamlit-lottie>=0.0.5",
    "structlog>=23.0.0",
    "pathlib2>=2.3.7",
    "typing-extensions>=4.0.0",
    "asyncio-extras>=1.3.2",
    "python-multipart>=0.0.6"
]

[project.scripts]
fastagent-cli = "fastagent_cli:main"
fastagent-ui = "src.streamlit_interface.cli:main"
fastagent-dashboard = "src.streamlit_interface.cli:main"
fastagent-streamlit = "src.streamlit_interface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
